--- a/src/config_parser/sample.conf
+++ b/src/config_parser/sample.conf
@@ -1,7 +1,7 @@
 server {
-    listen 8080; # Port and default server
+    listen 443; # Port and default server
     host 127.0.0.1; 
-    server_name test; # Server name
+    server_name test1; # Server name
 
     # Default error pages
     error_page 404 /404.html;
@@ -47,7 +47,7 @@ server {
 server {
     listen 8080; # Port and default server
     host 127.0.0.1; 
-    server_name test; # Server name
+    server_name test2; # Server name
 
     # Default error pages
     error_page 404 /404.html;
