config file: extract port, host, server name

--- a/src/config_parser/sample.conf
+++ b/src/config_parser/sample.conf
@@ -1,10 +1,10 @@
 server {
-    listen 443; # Port and default server
-    host 127.0.0.1; 
-    server_name test1; # Server name
+    listen   ;# Port and default server
+    host 127.0.0.2;
+    server_name test1 # Server name
 
     # Default error pages
-    error_page 404 /404.html;
+    error_page 404 /404.html
     error_page 500 502 503 504 /50x.html;
 
     # Limit client body size
@@ -46,8 +46,8 @@ server {
 
 server {
     listen 8080; # Port and default server
-    host 127.0.0.1; 
-    server_name test2; # Server name
+    host ; 
+    server_name ; # Server name
 
     # Default error pages
     error_page 404 /404.html;
@@ -84,7 +84,7 @@ server {
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_param PATH_INFO $document_root$fastcgi_script_name;
         }
-
+    }
         # File upload configuration
         client_body_temp_path /tmp/uploads;
     }
