--- a/src/config_parser/sample.conf
+++ b/src/config_parser/sample.conf
@@ -1,11 +1,11 @@
 server {
-    listen   ;# Port and default server
+    listen   8081;# Port and default server
     host 127.0.0.2;
-    server_name test1 # Server name
+    server_name test1; # Server name
 
     # Default error pages
-    error_page 404 /404.html
-    error_page 500 502 503 504 /50x.html;
+    error_page -34 /400.html;
+    error_page 400 401 402 /404.html;
 
     # Limit client body size
     client_max_body_size 10M;
@@ -50,8 +50,8 @@ server {
     server_name ; # Server name
 
     # Default error pages
-    error_page 404 /404.html;
-    error_page 500 502 503 504 /50x.html;
+    error_page 404 "";
+    error_page 500 50x.html;
 
     # Limit client body size
     client_max_body_size 10M;
