--- a/src/config_parser/sample.conf
+++ b/src/config_parser/sample.conf
@@ -4,8 +4,10 @@ server {
     server_name test1; # Server name
 
     # Default error pages
-    error_page -34 /400.html;
-    error_page 400 401 402 /404.html;
+
+    error_page 566 /error_page.html iugfwueg;
+    error_page 488 /400.html;
+    error_page 401 /404.html;
 
     # Limit client body size
     client_max_body_size 10M;
