ConfigData extract max client body size

--- a/src/config_parser/sample.conf
+++ b/src/config_parser/sample.conf
@@ -10,7 +10,7 @@ server {
     error_page 401 /404.html;
 
     # Limit client body size
-    client_max_body_size 10M;
+    client_max_body_size 1g;
 
     # Route configuration
     location /kapouet {
@@ -56,7 +56,7 @@ server {
     error_page 500 50x.html;
 
     # Limit client body size
-    client_max_body_size 10M;
+    client_max_body_size 1g;
 
     # Route configuration
     location /kapouet {
