--- a/src/config_parser/sample.conf
+++ b/src/config_parser/sample.conf
@@ -10,40 +10,32 @@ server {
     error_page 401 /404.html;
 
     # Limit client body size
-    client_max_body_size 1g;
+    client_max_body_size 1k;
 
     # Route configuration
-    location /kapouet {
-        root /tmp/www; # Define directory for the route
-
-        # Accepted HTTP methods
-        if ($request_method !~ ^(GET|POST)$ ) {
-            return 405;
-        }
-
-        # HTTP redirection
-        # if ($http_user_agent ~ MSIE) {
-        #     rewrite ^(.*)$ /msie/$1 break;
-        # }
-
-        # Directory listing
-        autoindex on;
-
-        # Default file
-        index index.html;
-
-        # CGI configuration
-        location ~ \.php$ {
-            include fastcgi_params;
-            fastcgi_pass unix:/var/run/php5-fpm.sock;
-            fastcgi_index index.php;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_param PATH_INFO $document_root$fastcgi_script_name;
-        }
-
-        # File upload configuration
-        client_body_temp_path /tmp/uploads;
+    location / {
+        root /data/www;
     }
+
+    location /images/ {
+        root /data;
+    }
+
+    location /api/data {
+    limit_except GET POST {
+        deny all;
+    }
+    }
+    location / {
+        proxy_pass http://localhost:8080;
+    }
+
+    location / {
+        fastcgi_pass  localhost:9000;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param QUERY_STRING    $query_string;
+    }
+
 }
 
 server {
@@ -56,39 +48,32 @@ server {
     error_page 500 50x.html;
 
     # Limit client body size
-    client_max_body_size 1g;
+    client_max_body_size 1M;
 
     # Route configuration
-    location /kapouet {
-        root /tmp/www; # Define directory for the route
-
-        # Accepted HTTP methods
-        if ($request_method !~ ^(GET|POST)$ ) {
-            return 405;
-        }
-
-        # HTTP redirection
-        # if ($http_user_agent ~ MSIE) {
-        #     rewrite ^(.*)$ /msie/$1 break;
-        # }
-
-        # Directory listing
-        autoindex on;
-
-        # Default file
-        index index.html;
-
-        # CGI configuration
-        location ~ \.php$ {
-            include fastcgi_params;
-            fastcgi_pass unix:/var/run/php5-fpm.sock;
-            fastcgi_index index.php;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_param PATH_INFO $document_root$fastcgi_script_name;
-        }
+    # Route configuration
+    location / {
+        root /data/www;
     }
-        # File upload configuration
-        client_body_temp_path /tmp/uploads;
+
+    location /images/ {
+        root /data;
+    }
+
+    location / {
+    }
+    location / {
+        proxy_pass http://localhost:8080;
+    }
+
+    location ~ \.(gif|jpg|png)$ {
+    root /data/images;
+    }
+    
+    location / {
+        fastcgi_pass  localhost:9000;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param QUERY_STRING    $query_string;
     }
 }
 
