config parse: location data extracting WIP

--- a/src/config_parser/sample.conf
+++ b/src/config_parser/sample.conf
@@ -19,18 +19,26 @@ server {
 
     location /images/ {
         root /data;
+        return /newR outeeeee             ;
+        alias           /data/api/example.json             ;
     }
 
     location /api/data {
-    limit_except GET POST {
+    limit_except GET      POST          DELET_E {
         deny all;
+        }
+    alias /data/api/example.json;
     }
-    }
+    
+    
     location / {
         proxy_pass http://localhost:8080;
+        root /data/api/example/;
     }
 
+
     location / {
+        root /data/www;
         fastcgi_pass  localhost:9000;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param QUERY_STRING    $query_string;
@@ -59,22 +67,20 @@ server {
     location /images/ {
         root /data;
     }
-
-    location / {
-    }
     location / {
         proxy_pass http://localhost:8080;
+        alias /data/api/example.json;
     }
 
-    location ~ \.(gif|jpg|png)$ {
-    root /data/images;
-    }
+    # location ~ \.(gif|jpg|png)$ {
+    # root /data/images;
+    # }
     
-    location / {
-        fastcgi_pass  localhost:9000;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param QUERY_STRING    $query_string;
-    }
+    # location / {
+    #     fastcgi_pass  localhost:9000;
+    #     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    #     fastcgi_param QUERY_STRING    $query_string;
+    # }
 }
 
 server {
