Config parse: add autoindex & index

--- a/src/config_parser/sample.conf
+++ b/src/config_parser/sample.conf
@@ -15,12 +15,18 @@ server {
     # Route configuration
     location / {
         root /data/www;
+        # index ;
+        index test_index.html;
+        # index ds j fd wkej wefdc.html;
+        error_page ;
     }
 
     location /images/ {
         root /data;
         return /newR outeeeee             ;
         alias           /data/api/example.json             ;
+        autoindex off;
+        index index0.html;
     }
 
     location /api/data {
@@ -28,6 +34,8 @@ server {
         deny all;
         }
     alias /data/api/example.json;
+    autoindex on;
+    index default.html;
     }
     
     
