ConfigParse: add cgi directive, change single port to multiple ports for each server

--- a/src/config_parser/sample.conf
+++ b/src/config_parser/sample.conf
@@ -1,7 +1,8 @@
 server {
-    listen   8081;# Port and default server
+    # listen  10004;# Port and default server
+    # listen ;   
     host 127.0.0.2;
-    server_name test1; # Server name
+    server_name listen; # Server name
 
     # Default error pages
 
@@ -13,12 +14,14 @@ server {
     client_max_body_size 1k;
 
     # Route configuration
-    location / {
+    location /test {
         root /data/www;
         # index ;
         index test_index.html;
         # index ds j fd wkej wefdc.html;
         error_page ;
+        cgi-path /test/cgi-bin;
+        cgi-exten py;
     }
 
     location /images/ {
@@ -41,17 +44,8 @@ server {
     
     location / {
         proxy_pass http://localhost:8080;
-        root /data/api/example/;
+        root /data/api/example;
     }
-
-
-    location / {
-        root /data/www;
-        fastcgi_pass  localhost:9000;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param QUERY_STRING    $query_string;
-    }
-
 }
 
 server {
