--- a/src/config_parser/sample.conf
+++ b/src/config_parser/sample.conf
@@ -1,14 +1,15 @@
 server {
-    # listen  10004;# Port and default server
-    # listen ;   
-    host 127.0.0.2;
-    server_name listen; # Server name
+    listen  10004;# Port and default server
+      
+    host 127.0.0.1 ;
+    server_name test; # Server name
 
     # Default error pages
 
-    error_page 566 /error_page.html iugfwueg;
+    error_page 566 /error_page.html;
     error_page 488 /400.html;
     error_page 401 /404.html;
+    # error_page ;
 
     # Limit client body size
     client_max_body_size 1k;
@@ -19,7 +20,6 @@ server {
         # index ;
         index test_index.html;
         # index ds j fd wkej wefdc.html;
-        error_page ;
         cgi-path /test/cgi-bin;
         cgi-exten py;
     }
@@ -46,12 +46,14 @@ server {
         proxy_pass http://localhost:8080;
         root /data/api/example;
     }
+
+    # listen 10004; 
 }
 
 server {
-    listen 8080; # Port and default server
+    listen 10004; # Port and default server
     host ; 
-    server_name ; # Server name
+    server_name test2; # Server name
 
     # Default error pages
     error_page 404 "";
