configData: extractDirectiveValue checks for duplicate now

--- a/src/config_parser/sample.conf
+++ b/src/config_parser/sample.conf
@@ -1,8 +1,9 @@
 server {
-    listen  10004;# Port and default server
+    listen  10002;# Port and default server
       
-    host 127.0.0.1 ;
-    server_name test; # Server name
+    host 127.0.0.2 ;
+    server_name testi; # Server name
+    # server_name ; # Server name
 
     # Default error pages
 
@@ -12,7 +13,8 @@ server {
     # error_page ;
 
     # Limit client body size
-    client_max_body_size 1k;
+    client_max_body_size 1k ;
+    # client_max_body_size  ;
 
     # Route configuration
     location /test {
@@ -42,17 +44,17 @@ server {
     }
     
     
-    location / {
+    location /test {
         proxy_pass http://localhost:8080;
         root /data/api/example;
     }
 
-    # listen 10004; 
+    listen 10004; 
 }
 
 server {
     listen 10004; # Port and default server
-    host ; 
+    host localhost; 
     server_name test2; # Server name
 
     # Default error pages
