--- a/src/config_parser/sample.conf
+++ b/src/config_parser/sample.conf
@@ -1,8 +1,9 @@
 server {
     listen  10002;# Port and default server
       
-    host 127.0.0.2 ;
-    server_name testi; # Server name
+    # host 127.0.0.2 ;
+    # host ;
+    # server_name testi te; # Server name
     # server_name ; # Server name
 
     # Default error pages
@@ -13,7 +14,7 @@ server {
     # error_page ;
 
     # Limit client body size
-    client_max_body_size 1k ;
+    # client_max_body_size 1k y;
     # client_max_body_size  ;
 
     # Route configuration
