--- a/src/Server/sample.conf
+++ b/src/Server/sample.conf
@@ -1,7 +1,7 @@
 server {
-    listen  10002;# Port and default server
+    # listen  10002;# Port and default server
       
-    # host 127.0.0.2 ;
+    host 127.0.0.2 ;
     # host ;
     # server_name testi te; # Server name
     # server_name ; # Server name
@@ -50,11 +50,11 @@ server {
         root /data/api/example;
     }
 
-    # listen 10004; 
+    listen 8080; 
 }
 
 server {
-    listen 10004; # Port and default server
+    listen 8081; # Port and default server
     host localhost; 
     server_name test2; # Server name
 
