add Location getters and clean the code

--- a/src/config_parser/sample.conf
+++ b/src/config_parser/sample.conf
@@ -25,6 +25,9 @@ server {
         # index ds j fd wkej wefdc.html;
         cgi-path /test/cgi-bin;
         cgi-exten py;
+        limit_except DELETE {
+        deny all;
+        }
     }
 
     location /images/ {
@@ -36,12 +39,12 @@ server {
     }
 
     location /api/data {
-    limit_except GET      POST          DELET_E {
-        deny all;
-        }
-    alias /data/api/example.json;
-    autoindex on;
-    index default.html;
+        limit_except DELETE {
+            deny all;
+            }
+        alias /data/api/example.json;
+        autoindex on;
+        index default.html;
     }
     
     
