fixing chunked request

--- a/src/Server/Makefile
+++ b/src/Server/Makefile
@@ -4,6 +4,7 @@ SRCS = main.cpp \
 		Server.cpp \
 		ServerManager.cpp \
 		Client.cpp \
+		../Request/HttpMessage.cpp \
 		../Request/Request.cpp \
 		../Response/Response.cpp \
 		../config_parser/ConfigParser.cpp \
