--- a/src/Server/sample.conf
+++ b/src/Server/sample.conf
@@ -36,7 +36,7 @@ server {
     }
 
     location /api/data {
-    limit_except GET      POST          DELET_E {
+    limit_except GET      POST   {
         deny all;
         }
     alias /data/api/example.json;
