adjust configs accepted method to match HttpMethod type

--- a/src/config_parser/sample.conf
+++ b/src/config_parser/sample.conf
@@ -26,23 +26,19 @@ server {
         # index ds j fd wkej wefdc.html;
         cgi-path /test/cgi-bin;
         cgi-exten py;
-        limit_except DELETE {
-        deny all;
-        }
+        allowed_method DELETE;
     }
 
     location /images/ {
         root /data;
         return /newR outeeeee             ;
-        alias           /data/api/example.json             ;
+        # alias           /data/api/example.json             ;
         autoindex off;
         index index0.html;
     }
 
     location /api/data {
-        limit_except DELETE {
-            deny all;
-            }
+        allowed_method DELETE;
         alias /data/api/example.json;
         autoindex on;
         index default.html;
