--- a/src/Server/sample.conf
+++ b/src/Server/sample.conf
@@ -1,7 +1,8 @@
 server {
-    # listen  10002;# Port and default server
+    listen  10002;# Port and default server
+    server_name test1;
       
-    host 127.0.0.1 ;
+    # host 127.0.0.2 ;
     # host ;
     # server_name testi te; # Server name
     # server_name ; # Server name
@@ -25,23 +26,22 @@ server {
         # index ds j fd wkej wefdc.html;
         cgi-path /test/cgi-bin;
         cgi-exten py;
+        allowed_method DELETE;
     }
 
     location /images/ {
         root /data;
         return /newR outeeeee             ;
-        alias           /data/api/example.json             ;
+        # alias           /data/api/example.json             ;
         autoindex off;
         index index0.html;
     }
 
     location /api/data {
-    limit_except GET      POST          DELETE {
-        deny all;
-        }
-    alias /data/api/example.json;
-    autoindex on;
-    index default.html;
+        allowed_method DELETE;
+        alias /data/api/example.json;
+        autoindex on;
+        index default.html;
     }
     
     
@@ -50,11 +50,11 @@ server {
         root /data/api/example;
     }
 
-    listen 8080; 
+    # listen 10004; 
 }
 
 server {
-    listen 8081; # Port and default server
+    listen 10004; # Port and default server
     host localhost; 
     server_name test2; # Server name
 
