add testPage.html, mode all colours to defines.hpp, add redurect request tests

--- a/src/Request/sample.conf
+++ b/src/Request/sample.conf
@@ -1,11 +1,7 @@
 server {
     listen  10002;# Port and default server
-    server_name test1
-      
-    # host 127.0.0.2 ;
-    # host ;
-    # server_name testi te; # Server name
-    # server_name ; # Server name
+    server_name WEBSERVANT
+
 
     # Default error pages
 
@@ -16,80 +12,19 @@ server {
 
     # Limit client body size
     # client_max_body_size 1k y;
-    # client_max_body_size  ;
+    client_max_body_size 1k;
 
     # Route configuration
     location /test {
-        root /data/www;
+        # root /pages;
         # index ;
+        return /pages
         index test_index.html;
         # index ds j fd wkej wefdc.html;
-        cgi-path /test/cgi-bin;
-        cgi-exten py;
-        allowed_method DELETE;
-    }
-
-    location /images/ {
-        root /data;
-        return /newR outeeeee             ;
-        # alias           /data/api/example.json             ;
-        autoindex off;
-        index index0.html;
-    }
-
-    location /api/data {
-        allowed_method DELETE;
-        alias /data/api/example.json;
+        # cgi-path /test/cgi-bin;
+        # cgi-exten py;
         autoindex on;
         index default.html;
+        allowed_method DELETE GET POST HEAD
     }
-    
-    
-    location /test {
-        proxy_pass http://localhost:8080;
-        root /data/api/example;
-    }
-
-    # listen 10004; 
 }
-
-server {
-    listen 10004; # Port and default server
-    host localhost; 
-    server_name test2; # Server name
-
-    # Default error pages
-    error_page 404 "";
-    error_page 500 50x.html;
-
-    # Limit client body size
-    client_max_body_size 1M;
-
-    # Route configuration
-    # Route configuration
-    location / {
-        root /data/www;
-    }
-
-    location /images/ {
-        root /data;
-    }
-    location / {
-        proxy_pass http://localhost:8080;
-        alias /data/api/example.json;
-    }
-
-    # location ~ \.(gif|jpg|png)$ {
-    # root /data/images;
-    # }
-    
-    # location / {
-    #     fastcgi_pass  localhost:9000;
-    #     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    #     fastcgi_param QUERY_STRING    $query_string;
-    # }
-}
-
-server {
-    listen 8080; # Port and default server
-    host
