--- a/src/Request/Makefile
+++ b/src/Request/Makefile
@@ -11,6 +11,8 @@ SRCS = main.cpp \
 		../config_parser/Location.cpp \
 		../StringUtils/StringUtils.cpp \
 		../DefaultErrorPage/DefaultErrorPage.cpp \
+		../DirectoryListingPage/DirectoryListingPage.cpp \
+		../FileSystemUtils/FileSystemUtils.cpp \
 
 CC = c++
 
