add env to CgiHandle

--- a/src/CgiHandler/Makefile
+++ b/src/CgiHandler/Makefile
@@ -1,35 +1,38 @@
-CFLAGS = c++ -Wall -Wextra -Werror -std=c++17 -Iincludes
-# DEBUG = -fsanitize=address
-
-NAME = cgiTest
+NAME = cgi_test
 
 SRCS = main.cpp \
-	CgiHandler.cpp \
-	../config_parser/ConfigData.cpp \
-	../config_parser/ConfigParser.cpp \
-	../config_parser/Location.cpp \
-	../Request/Request.cpp \
+		CgiHandler.cpp \
+		../Server/Server.cpp \
+		../Server/Client.cpp \
+		../HttpMessage/HttpMessage.cpp \
+		../Request/Request.cpp \
+		../Response/Response.cpp \
+		../config_parser/ConfigParser.cpp \
+		../config_parser/ConfigData.cpp \
+		../config_parser/Location.cpp \
+		../StringUtils/StringUtils.cpp \
+		../DefaultErrorPage/DefaultErrorPage.cpp \
+		../DirectoryListingPage/DirectoryListingPage.cpp \
+		../FileSystemUtils/FileSystemUtils.cpp \
 
-OBJ_PATH = objects/
-OBJ		= $(SRCS:.cpp=.o)
-OBJS	= $(addprefix $(OBJ_PATH), $(OBJ))
+CC = c++
 
-# SRCFD = sources/
-# SRCS	= $(addprefix $(SRCFD), $(SRC))
+FLAGS = -Wall -Wextra -Werror -std=c++17
+
+OBJS = $(SRCS:.cpp=.o)
 
 all: $(NAME)
 
-$(OBJ_PATH):
-	mkdir -p $(OBJ_PATH)
+$(NAME): $(OBJS)
+	$(CC) -o $@ $(OBJS) $(FLAGS)
 
-$(OBJ_PATH)%.o: $(SRCFD)%.cpp
-	$(CFLAGS) $(DEBUG) -c $< -o $@
+%.o: %.cpp
+	$(CC) -c $(FLAGS) -o $@ $<
 
-$(NAME): $(OBJ_PATH) $(OBJS)
-	$(CFLAGS) $(OBJS) $(DEBUG) -o $@
-	
+.PHONY: clean fclean re
+
 clean:
-	rm -rf $(OBJ_PATH)
+	rm -f *.o
 
 fclean: clean
 	rm -f $(NAME)
