--- a/src/CgiHandler/sample.conf
+++ b/src/CgiHandler/sample.conf
@@ -31,9 +31,9 @@ server {
         root .;
         # index ;
         # index ds j fd wkej wefdc.html;
-        allowed_method DELETE;
+        allowed_method GET POST;
         cgi_exten .py;
-        cgi_path /usr/bin/python3;
+        cgi_executor /usr/bin/python3;
     }
 
     location /images/ {
