redirection, error pages, index, directory listings now work. somethign seems to be odd with getFileData() function, gets 0 bytes

--- a/src/Request/Makefile
+++ b/src/Request/Makefile
@@ -10,9 +10,8 @@ SRCS = main.cpp \
 		../config_parser/ConfigData.cpp \
 		../config_parser/Location.cpp \
 		../StringUtils/StringUtils.cpp \
-		../DefaultErrorPage/DefaultErrorPage.cpp \
-		../DirectoryListingPage/DirectoryListingPage.cpp \
-		../FileSystemUtils/FileSystemUtils.cpp \
+		../BinaryData/BinaryData.cpp \
+		../FileSystemUtils/FileSystemUtils.cpp
 
 CC = c++
 
