--- a/src/Request/sample.conf
+++ b/src/Request/sample.conf
@@ -1,6 +1,6 @@
 server {
     listen  10002;# Port and default server
-    server_name WEBSERVANT
+    server_name WEBSERVANT;
 
 
     # Default error pages
@@ -13,18 +13,31 @@ server {
     # Limit client body size
     # client_max_body_size 1k y;
     client_max_body_size 1k;
-
+    
     # Route configuration
-    location /test {
-        # root /pages;
+    location / {
+        root ../pages;
         # index ;
-        return /pages
-        index test_index.html;
+        # return /pages;
+        # index test_index.html;
         # index ds j fd wkej wefdc.html;
         # cgi-path /test/cgi-bin;
-        # cgi-exten py;
+        cgi-exten py;
         autoindex on;
-        index default.html;
-        allowed_method DELETE GET POST HEAD
+
+        index testPage.html;
+        # allowed_method DELETE GET POST HEAD;
     }
+
 }
+
+# /flower/script.py
+
+# GET /test/script.py HTTP/1.1
+# GET /cgi-bin/script.py HTTP/1.1
+
+# cgi-bin/script.py
+
+# GET /cgi-bin/script.py HTTP/1.1
+
+#TODO: alias and root conflict. also just handle alias
