change cgi setup in config

--- a/src/CgiHandler/Makefile
+++ b/src/CgiHandler/Makefile
@@ -14,6 +14,7 @@ SRCS = main.cpp \
 		../DefaultErrorPage/DefaultErrorPage.cpp \
 		../DirectoryListingPage/DirectoryListingPage.cpp \
 		../FileSystemUtils/FileSystemUtils.cpp \
+		../BinaryData/BinaryData.cpp \
 
 CC = c++
 
