check if cgiDir accessible and print cgiEnv

--- a/src/CgiHandler/sample.conf
+++ b/src/CgiHandler/sample.conf
@@ -28,7 +28,7 @@ server {
         root /data/www;
         # index ;
         index test_index.html;
-        # index ds j fd wkej wefdc.html;
+        return tbh;
         allowed_method DELETE;
     }
 
