fix binary file response

--- a/src/Request/Makefile
+++ b/src/Request/Makefile
@@ -11,7 +11,8 @@ SRCS = main.cpp \
 		../config_parser/Location.cpp \
 		../StringUtils/StringUtils.cpp \
 		../BinaryData/BinaryData.cpp \
-		../FileSystemUtils/FileSystemUtils.cpp
+		../FileSystemUtils/FileSystemUtils.cpp \
+		../Logger/Logger.cpp
 
 CC = c++
 
