--- a/src/Request/sample.conf
+++ b/src/Request/sample.conf
@@ -13,6 +13,10 @@ server {
     # Limit client body size
     # client_max_body_size 1k y;
     client_max_body_size 1k;
+
+    cgi_dir ./cgi-bin;
+    cgi_exten .py;
+    cgi_executor /usr/bin/python3;
     
     # Route configuration
     location / {
@@ -28,6 +32,8 @@ server {
         index testPage.html;
         # allowed_method DELETE GET POST HEAD;
     }
+
+    
 
 }
 
