add alias, still testing

--- a/src/Request/sample.conf
+++ b/src/Request/sample.conf
@@ -19,8 +19,8 @@ server {
     cgi_executor /usr/bin/python3;
     
     # Route configuration
-    location / {
-        root ../pages;
+    location /hi {
+        alias ../pages;
         # index ;
         # return /pages;
         # index test_index.html;
