--- a/src/Server/sample.conf
+++ b/src/Server/sample.conf
@@ -1,11 +1,7 @@
 server {
     listen  10002;# Port and default server
-    server_name test1;
-      
-    # host 127.0.0.2 ;
-    # host ;
-    # server_name testi te; # Server name
-    # server_name ; # Server name
+    server_name WEBSERVANT;
+
 
     # Default error pages
 
@@ -16,81 +12,38 @@ server {
 
     # Limit client body size
     # client_max_body_size 1k y;
-    # client_max_body_size  ;
+    client_max_body_size 1k;
 
-    # Route configuration
-    location /test {
-        root /data/www;
-        # index ;
-        index test_index.html;
-        # index ds j fd wkej wefdc.html;
-        allowed_method DELETE;
-    }
-
-    location /cgi-bin {
-        root .;
-        # index ;
-        # index ds j fd wkej wefdc.html;
-        allowed_method DELETE;
-        cgi_exten .py;
-        cgi_path /usr/bin/python3;
-    }
-
-    location /images/ {
-        root /data;
-        return /newR;
-        # alias           /data/api/example.json             ;
-        autoindex off;
-        index index0.html;
-    }
-
-    location /api/data {
-        allowed_method DELETE;
-        alias /data/api/example.json;
-        autoindex on;
-        index default.html;
-    }
-
-    # listen 10004; 
-}
-
-server {
-    listen 10004; # Port and default server
-    host localhost; 
-    server_name test2; # Server name
-
-    # Default error pages
-    error_page 404 "";
-    error_page 500 50x.html;
-
-    # Limit client body size
-    client_max_body_size 1M;
-
-    # Route configuration
-    # Route configuration
-    location / {
-        root /data/www;
-    }
-
-    location /images/ {
-        root /data;
-    }
-    location / {
-        proxy_pass http://localhost:8080;
-        alias /data/api/example.json;
-    }
-
-    # location ~ \.(gif|jpg|png)$ {
-    # root /data/images;
-    # }
+    cgi_dir ./cgi-bin;
+    cgi_exten .py;
+    cgi_executor /usr/bin/python3;
     
-    # location / {
-    #     fastcgi_pass  localhost:9000;
-    #     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    #     fastcgi_param QUERY_STRING    $query_string;
-    # }
+    # Route configuration
+    location /hi {
+        alias ../pages;
+        # index ;
+        # return /pages;
+        # index test_index.html;
+        # index ds j fd wkej wefdc.html;
+        # cgi-path /test/cgi-bin;
+        cgi-exten py;
+        autoindex on;
+
+        index testPage.html;
+        # allowed_method DELETE GET POST HEAD;
+    }
+
+    
+
 }
 
-server {
-    listen 8080; # Port and default server
-    host
+# /flower/script.py
+
+# GET /test/script.py HTTP/1.1
+# GET /cgi-bin/script.py HTTP/1.1
+
+# cgi-bin/script.py
+
+# GET /cgi-bin/script.py HTTP/1.1
+
+#TODO: alias and root conflict. also just handle alias
