add save_dir to config location

--- a/src/CgiHandler/Makefile
+++ b/src/CgiHandler/Makefile
@@ -11,10 +11,9 @@ SRCS = main.cpp \
 		../config_parser/ConfigData.cpp \
 		../config_parser/Location.cpp \
 		../StringUtils/StringUtils.cpp \
-		../DefaultErrorPage/DefaultErrorPage.cpp \
-		../DirectoryListingPage/DirectoryListingPage.cpp \
 		../FileSystemUtils/FileSystemUtils.cpp \
 		../BinaryData/BinaryData.cpp \
+		../Logger/Logger.cpp \
 
 CC = c++
 
