--- a/src/CgiHandler/sample.conf
+++ b/src/CgiHandler/sample.conf
@@ -30,6 +30,7 @@ server {
         index test_index.html;
         return tbh;
         allowed_method DELETE;
+        save_dir /save_dir;
     }
 
     location /images/ {
@@ -38,6 +39,7 @@ server {
         # alias           /data/api/example.json             ;
         autoindex off;
         index index0.html;
+        save_dir /save_dir2;
     }
 
     location /api/data {
@@ -45,6 +47,7 @@ server {
         alias /data/api/example.json;
         autoindex on;
         index default.html;
+        save_dir /save_dir3;
     }
 
     # listen 10004; 
@@ -70,10 +73,6 @@ server {
 
     location /images/ {
         root /data;
-    }
-    location / {
-        proxy_pass http://localhost:8080;
-        alias /data/api/example.json;
     }
 
     # location ~ \.(gif|jpg|png)$ {
