--- a/src/config_parser/sample.conf
+++ b/src/config_parser/sample.conf
@@ -1,6 +1,6 @@
 server {
     listen  10002;# Port and default server
-    server_name test1
+    server_name test1;
       
     # host 127.0.0.2 ;
     # host ;
@@ -14,6 +14,11 @@ server {
     error_page 401 /404.html;
     # error_page ;
 
+    #cgi configuration
+    cgi_dir ./cgi-bin;
+    cgi_exten .py;
+    cgi_executor /usr/bin/python3;
+
     # Limit client body size
     # client_max_body_size 1k y;
     # client_max_body_size  ;
@@ -23,18 +28,18 @@ server {
         root /data/www;
         # index ;
         index test_index.html;
-        # index ds j fd wkej wefdc.html;
-        cgi-path /test/cgi-bin;
-        cgi-exten py;
+        return tbh;
         allowed_method DELETE;
+        save_dir /saved_dir0;
     }
 
     location /images/ {
         root /data;
-        return /newR outeeeee             ;
+        return /newR;
         # alias           /data/api/example.json             ;
         autoindex off;
         index index0.html;
+        save_dir /saved_dir1;
     }
 
     location /api/data {
@@ -42,12 +47,7 @@ server {
         alias /data/api/example.json;
         autoindex on;
         index default.html;
-    }
-    
-    
-    location /test {
-        proxy_pass http://localhost:8080;
-        root /data/api/example;
+        save_dir /saved_dir2;
     }
 
     # listen 10004; 
@@ -73,10 +73,6 @@ server {
 
     location /images/ {
         root /data;
-    }
-    location / {
-        proxy_pass http://localhost:8080;
-        alias /data/api/example.json;
     }
 
     # location ~ \.(gif|jpg|png)$ {
