add checkForDuplicateHostAndPort to validate config file

--- a/src/Server/sample.conf
+++ b/src/Server/sample.conf
@@ -1,5 +1,6 @@
 server {
     listen  10002;# Port and default server
+    # host 127.0.0.2;
     server_name WEBSERVANT;
 
 
@@ -36,6 +37,46 @@ server {
     
 
 }
+
+server {
+    listen  10003;# Port and default server
+    server_name WEBSERVANT2;
+
+
+    # Default error pages
+
+    error_page 566 /error_page.html;
+    error_page 488 /400.html;
+    error_page 401 /404.html;
+    # error_page ;
+
+    # Limit client body size
+    # client_max_body_size 1k y;
+    client_max_body_size 1k;
+
+    cgi_dir ./cgi-bin;
+    cgi_exten .py;
+    cgi_executor /usr/bin/python3;
+    
+    # Route configuration
+    location /hi {
+        alias ../pages;
+        # index ;
+        # return /pages;
+        # index test_index.html;
+        # index ds j fd wkej wefdc.html;
+        # cgi-path /test/cgi-bin;
+        cgi-exten py;
+        autoindex on;
+
+        index testPage.html;
+        # allowed_method DELETE GET POST HEAD;
+    }
+
+    
+
+}
+
 
 # /flower/script.py
 
