config location: trim slash in directive values for routes

--- a/src/CgiHandler/sample.conf
+++ b/src/CgiHandler/sample.conf
@@ -24,13 +24,13 @@ server {
     # client_max_body_size  ;
 
     # Route configuration
-    location /test {
-        root /data/www;
+    location /test/ {
+        root /data/www/;
         # index ;
         index test_index.html;
-        return tbh;
+        return tbh/;
         allowed_method DELETE;
-        save_dir /save_dir;
+        save_dir /save_dir/;
     }
 
     location /images/ {
@@ -44,7 +44,7 @@ server {
 
     location /api/data {
         allowed_method DELETE;
-        alias /data/api/example.json;
+        alias /data/api/example/;
         autoindex on;
         index default.html;
         save_dir /save_dir3;
