change config to vector of config

--- a/src/Server/sample.conf
+++ b/src/Server/sample.conf
@@ -1,7 +1,7 @@
 server {
     listen  10002;# Port and default server
     # host 127.0.0.2;
-    server_name WEBSERVANT;
+    server_name WEBSERVANT1;
 
 
     # Default error pages
@@ -13,7 +13,7 @@ server {
 
     # Limit client body size
     # client_max_body_size 1k y;
-    client_max_body_size 1k;
+    # client_max_body_size 1k;
 
     cgi_dir ./cgi-bin;
     cgi_exten .py;
@@ -33,9 +33,43 @@ server {
         index testPage.html;
         # allowed_method DELETE GET POST HEAD;
     }
+}
 
+server {
+    listen  10002;# Port and default server
+    # host 127.0.0.2;
+    server_name WEBSERVANT1.1;
+
+
+    # Default error pages
+
+    error_page 566 /error_page.html;
+    error_page 488 /400.html;
+    error_page 401 /404.html;
+    # error_page ;
+
+    # Limit client body size
+    # client_max_body_size 1k y;
+    # client_max_body_size 1k;
+
+    cgi_dir ./cgi-bin;
+    cgi_exten .py;
+    cgi_executor /usr/bin/python3;
     
+    # Route configuration
+    location /hi {
+        alias ../pages;
+        # index ;
+        # return /pages;
+        # index test_index.html;
+        # index ds j fd wkej wefdc.html;
+        # cgi-path /test/cgi-bin;
+        cgi-exten py;
+        autoindex on;
 
+        index testPage.html;
+        # allowed_method DELETE GET POST HEAD;
+    }
 }
 
 server {
@@ -52,7 +86,7 @@ server {
 
     # Limit client body size
     # client_max_body_size 1k y;
-    client_max_body_size 1k;
+    # client_max_body_size 1k;
 
     cgi_dir ./cgi-bin;
     cgi_exten .py;
@@ -72,11 +106,43 @@ server {
         index testPage.html;
         # allowed_method DELETE GET POST HEAD;
     }
-
-    
-
 }
 
+server {
+    listen  10003;# Port and default server
+    server_name WEBSERVANT2.1;
+
+
+    # Default error pages
+
+    error_page 566 /error_page.html;
+    error_page 488 /400.html;
+    error_page 401 /404.html;
+    # error_page ;
+
+    # Limit client body size
+    # client_max_body_size 1k y;
+    # client_max_body_size 1k;
+
+    cgi_dir ./cgi-bin;
+    cgi_exten .py;
+    cgi_executor /usr/bin/python3;
+    
+    # Route configuration
+    location /hi {
+        alias ../pages;
+        # index ;
+        # return /pages;
+        # index test_index.html;
+        # index ds j fd wkej wefdc.html;
+        # cgi-path /test/cgi-bin;
+        cgi-exten py;
+        autoindex on;
+
+        index testPage.html;
+        # allowed_method DELETE GET POST HEAD;
+    }
+}
 
 # /flower/script.py
 
