--- a/src/Server/sample.conf
+++ b/src/Server/sample.conf
@@ -13,7 +13,7 @@ server {
 
     # Limit client body size
     # client_max_body_size 1k y;
-    # client_max_body_size 1k;
+    client_max_body_size 1k;
 
     cgi_dir ./cgi-bin;
     cgi_exten .py;
