--- a/src/CgiHandler/sample.conf
+++ b/src/CgiHandler/sample.conf
@@ -15,7 +15,7 @@ server {
     # error_page ;
 
     #cgi configuration
-    cgi_dir ./cgi-bin;
+    cgi_dir ./cgi-bin/;
     cgi_exten .py;
     cgi_executor /usr/bin/python3;
 
