fix processing of multipart data, also now it creates directory for uploads if it doesn't exist

--- a/src/Request/sample.conf
+++ b/src/Request/sample.conf
@@ -22,7 +22,7 @@ server {
     # Route configuration
     location /hi {
         alias ../pages;
-		save_dir /uploads;
+		save_dir /uploads2;
         # index ;
         # return /pages;
         # index test_index.html;
