--- a/src/Server/sample.conf
+++ b/src/Server/sample.conf
@@ -13,43 +13,6 @@ server {
 
     # Limit client body size
     # client_max_body_size 1k y;
-    client_max_body_size 1k;
-
-    cgi_dir ./cgi-bin;
-    cgi_exten .py;
-    cgi_executor /usr/bin/python3;
-    
-    # Route configuration
-    location /hi {
-        alias ../pages;
-        # index ;
-        # return /pages;
-        # index test_index.html;
-        # index ds j fd wkej wefdc.html;
-        # cgi-path /test/cgi-bin;
-        cgi-exten py;
-        autoindex on;
-
-        index testPage.html;
-        # allowed_method DELETE GET POST HEAD;
-    }
-}
-
-server {
-    listen  10002;# Port and default server
-    # host 127.0.0.2;
-    server_name WEBSERVANT1.1;
-
-
-    # Default error pages
-
-    error_page 566 /error_page.html;
-    error_page 488 /400.html;
-    error_page 401 /404.html;
-    # error_page ;
-
-    # Limit client body size
-    # client_max_body_size 1k y;
     # client_max_body_size 1k;
 
     cgi_dir ./cgi-bin;
@@ -59,6 +22,7 @@ server {
     # Route configuration
     location /hi {
         alias ../pages;
+		save_dir /uploads;
         # index ;
         # return /pages;
         # index test_index.html;
@@ -72,85 +36,122 @@ server {
     }
 }
 
-server {
-    listen  10003;# Port and default server
-    server_name WEBSERVANT2;
+# server {
+#     listen  10002;# Port and default server
+#     # host 127.0.0.2;
+#     server_name WEBSERVANT1.1;
 
 
-    # Default error pages
+#     # Default error pages
 
-    error_page 566 /error_page.html;
-    error_page 488 /400.html;
-    error_page 401 /404.html;
-    # error_page ;
+#     error_page 566 /error_page.html;
+#     error_page 488 /400.html;
+#     error_page 401 /404.html;
+#     # error_page ;
 
-    # Limit client body size
-    # client_max_body_size 1k y;
-    # client_max_body_size 1k;
+#     # Limit client body size
+#     # client_max_body_size 1k y;
+#     # client_max_body_size 1k;
 
-    cgi_dir ./cgi-bin;
-    cgi_exten .py;
-    cgi_executor /usr/bin/python3;
+#     cgi_dir ./cgi-bin;
+#     cgi_exten .py;
+#     cgi_executor /usr/bin/python3;
     
-    # Route configuration
-    location /hi {
-        alias ../pages;
-        # index ;
-        # return /pages;
-        # index test_index.html;
-        # index ds j fd wkej wefdc.html;
-        # cgi-path /test/cgi-bin;
-        cgi-exten py;
-        autoindex on;
+#     # Route configuration
+#     location /hi {
+#         alias ../pages;
+#         # index ;
+#         # return /pages;
+#         # index test_index.html;
+#         # index ds j fd wkej wefdc.html;
+#         # cgi-path /test/cgi-bin;
+#         cgi-exten py;
+#         autoindex on;
 
-        index testPage.html;
-        # allowed_method DELETE GET POST HEAD;
-    }
-}
+#         index testPage.html;
+#         # allowed_method DELETE GET POST HEAD;
+#     }
+# }
 
-server {
-    listen  10003;# Port and default server
-    server_name WEBSERVANT2.1;
+# server {
+#     listen  10003;# Port and default server
+#     server_name WEBSERVANT2;
 
 
-    # Default error pages
+#     # Default error pages
 
-    error_page 566 /error_page.html;
-    error_page 488 /400.html;
-    error_page 401 /404.html;
-    # error_page ;
+#     error_page 566 /error_page.html;
+#     error_page 488 /400.html;
+#     error_page 401 /404.html;
+#     # error_page ;
 
-    # Limit client body size
-    # client_max_body_size 1k y;
-    # client_max_body_size 1k;
+#     # Limit client body size
+#     # client_max_body_size 1k y;
+#     # client_max_body_size 1k;
 
-    cgi_dir ./cgi-bin;
-    cgi_exten .py;
-    cgi_executor /usr/bin/python3;
+#     cgi_dir ./cgi-bin;
+#     cgi_exten .py;
+#     cgi_executor /usr/bin/python3;
     
-    # Route configuration
-    location /hi {
-        alias ../pages;
-        # index ;
-        # return /pages;
-        # index test_index.html;
-        # index ds j fd wkej wefdc.html;
-        # cgi-path /test/cgi-bin;
-        cgi-exten py;
-        autoindex on;
+#     # Route configuration
+#     location /hi {
+#         alias ../pages;
+#         # index ;
+#         # return /pages;
+#         # index test_index.html;
+#         # index ds j fd wkej wefdc.html;
+#         # cgi-path /test/cgi-bin;
+#         cgi-exten py;
+#         autoindex on;
 
-        index testPage.html;
-        # allowed_method DELETE GET POST HEAD;
-    }
-}
+#         index testPage.html;
+#         # allowed_method DELETE GET POST HEAD;
+#     }
+# }
 
-# /flower/script.py
+# server {
+#     listen  10003;# Port and default server
+#     server_name WEBSERVANT2.1;
 
-# GET /test/script.py HTTP/1.1
-# GET /cgi-bin/script.py HTTP/1.1
 
-# cgi-bin/script.py
+#     # Default error pages
 
-# GET /cgi-bin/script.py HTTP/1.1
+#     error_page 566 /error_page.html;
+#     error_page 488 /400.html;
+#     error_page 401 /404.html;
+#     # error_page ;
 
-#TODO: alias and root conflict. also just handle alias
+#     # Limit client body size
+#     # client_max_body_size 1k y;
+#     # client_max_body_size 1k;
+
+#     cgi_dir ./cgi-bin;
+#     cgi_exten .py;
+#     cgi_executor /usr/bin/python3;
+    
+#     # Route configuration
+#     location /hi {
+#         alias ../pages;
+#         # index ;
+#         # return /pages;
+#         # index test_index.html;
+#         # index ds j fd wkej wefdc.html;
+#         # cgi-path /test/cgi-bin;
+#         cgi-exten py;
+#         autoindex on;
+
+#         index testPage.html;
+#         # allowed_method DELETE GET POST HEAD;
+#     }
+# }
+
+# # /flower/script.py
+
+# # GET /test/script.py HTTP/1.1
+# # GET /cgi-bin/script.py HTTP/1.1
+
+# # cgi-bin/script.py
+
+# # GET /cgi-bin/script.py HTTP/1.1
+
+# #TODO: alias and root conflict. also just handle alias
