add slash to redirect Location

--- a/src/Request/sample.conf
+++ b/src/Request/sample.conf
@@ -36,9 +36,13 @@ server {
 
     location /kapouet {
         alias /tmp/www;
+		#root /;
         autoindex on;
+		return /hi;
         index testPage.html;
     }
+
+	
 
     #if url /kapouet is rooted to /tmp/www, url /kapouet/pouic/toto/pouet is /tmp/www/pouic/toto/pouet
 
