--- a/src/Server/sample.conf
+++ b/src/Server/sample.conf
@@ -13,7 +13,7 @@ server {
 
     # Limit client body size
     # client_max_body_size 1k y;
-    # client_max_body_size 1k;
+    # client_max_body_size 5M;
 
     cgi_dir ./cgi-bin;
     cgi_exten .py;
@@ -23,13 +23,28 @@ server {
     location /hi {
         alias ../pages;
 		save_dir /uploads;
-        # index ;
-        # return /pages;
+        # index ;s
+        # return ../pages/uploadPage.html;
         # index test_index.html;
         # index ds j fd wkej wefdc.html;
         # cgi-path /test/cgi-bin;
+		return /bye;
         cgi-exten py;
         autoindex on;
+        index testPage.html;
+        # allowed_method DELETE GET POST HEAD;
+    }
+
+	location /bye {
+        alias /test;
+		# save_dir /uploads;
+        # index ;s
+        # return ../pages/uploadPage.html;
+        # index test_index.html;
+        # index ds j fd wkej wefdc.html;
+        # cgi-path /test/cgi-bin;
+        # cgi-exten py;
+        autoindex off;
 
         index testPage.html;
         # allowed_method DELETE GET POST HEAD;
