--- a/src/Server/sample.conf
+++ b/src/Server/sample.conf
@@ -28,12 +28,43 @@ server {
         # index test_index.html;
         # index ds j fd wkej wefdc.html;
         # cgi-path /test/cgi-bin;
-		return /bye;
+		# return /bye/webservPage.html;
         cgi-exten py;
         autoindex on;
         index testPage.html;
         # allowed_method DELETE GET POST HEAD;
     }
+
+	location /upload {
+        alias ../hi;
+        # index ;s
+        # return ../hi/uploadPage.html;
+        # index test_index.html;
+        # index ds j fd wkej wefdc.html;
+        # cgi-path /test/cgi-bin;
+		# return /bye/webservPage.html;
+        cgi-exten py;
+        autoindex on;
+		index uploadPage.html;
+        # allowed_method DELETE GET POST HEAD;
+    }
+
+
+	location / {
+        alias /test;
+		# save_dir /uploads;
+        # index ;s
+        # return ../pages/uploadPage.html;
+        # index test_index.html;
+        # index ds j fd wkej wefdc.html;
+        # cgi-path /test/cgi-bin;
+        # cgi-exten py;
+        autoindex off;
+
+        index testPage.html;
+        # allowed_method DELETE GET POST HEAD;
+    }
+	
 
 	location /bye {
         alias /test;
