WIP: handling multiple cgi

--- a/src/CgiHandler/sample.conf
+++ b/src/CgiHandler/sample.conf
@@ -16,10 +16,9 @@ server {
 
     #cgi configuration
     cgi_dir ./cgi-bin/;
-    # cgi_exten .py .sh;
-    # cgi_executor /usr/bin/python3 /bin/bash;
-    cgi_exten .py;
-    cgi_executor /usr/bin/python3;
+    cgi_exten .py .sh;
+    cgi_executor /usr/bin/python3 /bin/bash;
+    # cgi_executor /usr/bin/python3;
 
     # Limit client body size
     # client_max_body_size 1k y;
