--- a/src/Request/sample.conf
+++ b/src/Request/sample.conf
@@ -1,24 +1,14 @@
 server {
-    listen  10002;
+    listen  10003;
     server_name webserv;
     host 127.0.0.1;
-
-
-    # Default error pages
 
     error_page 566 /error_page.html;
     error_page 488 /400.html;
     error_page 401 /404.html;
-    # error_page ;
 
-    # Limit client body size
-    # client_max_body_size 1k y;
-    client_max_body_size 1k;
+    client_max_body_size 10M;
 
-    cgi_dir ./cgi-bin;
-    cgi_exten .py;
-    cgi_executor /usr/bin/python3;
-    
     # Route configuration
     location /hi {
         alias ../pages;
@@ -40,9 +30,39 @@ server {
 		return /hi;
         index testPage.html;
     }
+}
 
-	
+server {
+    listen  10002;
+    server_name webserv;
+    host 127.0.0.1;
 
+    # Default error pages
+
+    error_page 566 /error_page.html;
+    error_page 488 /400.html;
+    error_page 401 /404.html;
+    # error_page ;
+
+    client_max_body_size 1k;
+
+    cgi_dir ./cgi-bin;
+    cgi_exten .py;
+    cgi_executor /usr/bin/python3;
+    
+    # Route configuration
+    location /hi {
+        alias /kapouet/pouic/toto/pouet;
+		save_dir /uploads2;
+        # index ;
+        # return /pages;
+        # index test_index.html;
+        # index ds j fd wkej wefdc.html;
+        # cgi-path /test/cgi-bin;
+        autoindex on;
+        index testPage.html;
+        # allowed_method DELETE GET POST HEAD;
+    }
     #if url /kapouet is rooted to /tmp/www, url /kapouet/pouic/toto/pouet is /tmp/www/pouic/toto/pouet
 
 }
