--- a/src/Server/multipleHost.conf
+++ b/src/Server/multipleHost.conf
@@ -1,45 +1,41 @@
 server {
-    listen  10002;# Port and default server
-    # host 127.0.0.2;
-    server_name WEBSERVANT1;
-
-
-    # Default error pages
+    listen  10002;
+    server_name webserv1;
+    host 127.0.0.1;
 
     error_page 566 /error_page.html;
     error_page 488 /400.html;
     error_page 401 /404.html;
-    # error_page ;
 
-    # Limit client body size
-    # client_max_body_size 1k y;
-    # client_max_body_size 1k;
+    client_max_body_size 10M;
 
-    cgi_dir ./cgi-bin;
-    cgi_exten .py;
-    cgi_executor /usr/bin/python3;
-    
     # Route configuration
     location /hi {
         alias ../pages;
+		save_dir /uploads2;
         # index ;
         # return /pages;
         # index test_index.html;
         # index ds j fd wkej wefdc.html;
         # cgi-path /test/cgi-bin;
-        cgi-exten py;
-        autoindex on;
-
+        autoindex off;
         index testPage.html;
         # allowed_method DELETE GET POST HEAD;
+    }
+
+    location /kapouet {
+        alias /tmp/www;
+		#root /;
+        autoindex on;
+		return /hi;
+        index testPage.html;
     }
 }
 
 server {
-    listen  10002;# Port and default server
-    # host 127.0.0.2;
-    server_name WEBSERVANT1.1;
-
+    listen  10002;
+    server_name webserv2;
+    host 127.0.0.1;
 
     # Default error pages
 
@@ -48,33 +44,33 @@ server {
     error_page 401 /404.html;
     # error_page ;
 
-    # Limit client body size
-    # client_max_body_size 1k y;
-    # client_max_body_size 1k;
+    client_max_body_size 1k;
 
     cgi_dir ./cgi-bin;
     cgi_exten .py;
     cgi_executor /usr/bin/python3;
     
     # Route configuration
-    location /hi {
+    location /test {
         alias ../pages;
+		save_dir /uploads2;
         # index ;
         # return /pages;
         # index test_index.html;
         # index ds j fd wkej wefdc.html;
         # cgi-path /test/cgi-bin;
-        cgi-exten py;
-        autoindex on;
-
-        index testPage.html;
+        autoindex off;
+        index uploadPage.html;
         # allowed_method DELETE GET POST HEAD;
     }
+    #if url /kapouet is rooted to /tmp/www, url /kapouet/pouic/toto/pouet is /tmp/www/pouic/toto/pouet
+
 }
 
 server {
-    listen  10003;# Port and default server
-    server_name WEBSERVANT2;
+    listen  10003;
+    server_name webserv3;
+    host 127.0.0.1;
 
 
     # Default error pages
@@ -86,31 +82,32 @@ server {
 
     # Limit client body size
     # client_max_body_size 1k y;
-    # client_max_body_size 1k;
+    client_max_body_size 1k;
 
     cgi_dir ./cgi-bin;
     cgi_exten .py;
     cgi_executor /usr/bin/python3;
     
     # Route configuration
-    location /hi {
+    location /bye {
         alias ../pages;
+		save_dir /uploads2;
         # index ;
         # return /pages;
         # index test_index.html;
         # index ds j fd wkej wefdc.html;
         # cgi-path /test/cgi-bin;
-        cgi-exten py;
-        autoindex on;
-
-        index testPage.html;
+        autoindex off;
+        index webservPage.html;
         # allowed_method DELETE GET POST HEAD;
     }
+
 }
 
 server {
-    listen  10003;# Port and default server
-    server_name WEBSERVANT2.1;
+    listen  10003;
+    server_name webserv4;
+    host 127.0.0.1;
 
 
     # Default error pages
@@ -122,27 +119,28 @@ server {
 
     # Limit client body size
     # client_max_body_size 1k y;
-    # client_max_body_size 1k;
+    client_max_body_size 1k;
 
     cgi_dir ./cgi-bin;
     cgi_exten .py;
     cgi_executor /usr/bin/python3;
     
     # Route configuration
-    location /hi {
+    location /empty {
         alias ../pages;
+		save_dir /uploads2;
         # index ;
         # return /pages;
         # index test_index.html;
         # index ds j fd wkej wefdc.html;
         # cgi-path /test/cgi-bin;
-        cgi-exten py;
-        autoindex on;
-
-        index testPage.html;
+        autoindex off;
+        index emptyPage.html;
         # allowed_method DELETE GET POST HEAD;
     }
+
 }
+
 
 # /flower/script.py
 
