--- a/src/Server/sample.conf
+++ b/src/Server/sample.conf
@@ -1,14 +1,14 @@
 server {
     listen  10002;# Port and default server
-    # host 127.0.0.2;
-    server_name WEBSERVANT1;
+    host 127.0.0.1;
+    server_name localhost;
 
 
     # Default error pages
 
-    error_page 566 /error_page.html;
-    error_page 488 /400.html;
-    error_page 401 /404.html;
+    error_page 566 ../pages/error_page.html;
+    error_page 404 ../pages/404.html;
+    error_page 401 ../pages/401.html;
     # error_page ;
 
     # Limit client body size
@@ -37,15 +37,15 @@ server {
 
 server {
     listen  10002;# Port and default server
-    # host 127.0.0.2;
+    host 127.0.0.1;
     server_name WEBSERVANT1.1;
 
 
     # Default error pages
 
-    error_page 566 /error_page.html;
-    error_page 488 /400.html;
-    error_page 401 /404.html;
+    error_page 566 ../pages/error_page.html;
+    error_page 488 ../pages/400.html;
+    error_page 404 ../pages/404.html;
     # error_page ;
 
     # Limit client body size
@@ -79,9 +79,9 @@ server {
 
     # Default error pages
 
-    error_page 566 /error_page.html;
-    error_page 488 /400.html;
-    error_page 401 /404.html;
+    error_page 566 ../pages/error_page.html;
+    error_page 488 ../pages/400.html;
+    error_page 401 ../pages/404.html;
     # error_page ;
 
     # Limit client body size
@@ -115,9 +115,9 @@ server {
 
     # Default error pages
 
-    error_page 566 /error_page.html;
-    error_page 488 /400.html;
-    error_page 401 /404.html;
+    error_page 566 ../pages/error_page.html;
+    error_page 488 ../pages/400.html;
+    error_page 401 ../pages/404.html;
     # error_page ;
 
     # Limit client body size
