--- a/src/Server/sample.conf
+++ b/src/Server/sample.conf
@@ -1,92 +1,50 @@
 server {
-    listen  10002;# Port and default server
-    host 127.0.0.1;
+    listen  10002;
     server_name localhost;
-
-
-    # Default error pages
-
-    error_page 566 ../pages/error_page.html;
-    error_page 404 ../pages/404.html;
-    error_page 401 ../pages/401.html;
-    # error_page ;
-
-    # Limit client body size
-    # client_max_body_size 1k y;
-    client_max_body_size 5M;
-
-    cgi_dir ./cgi-bin;
-    cgi_exten .py;
-    cgi_executor /usr/bin/python3;
-    
-    # Route configuration
-    location /hi {
-        alias ../pages;
-        # index ;
-        # return /pages;
-        # index test_index.html;
-        # index ds j fd wkej wefdc.html;
-        # cgi-path /test/cgi-bin;
-        cgi-exten py;
-        autoindex on;
-
-        index testPage.html;
-        # allowed_method DELETE GET POST HEAD;
-    }
-}
-
-server {
-    listen  10002;# Port and default server
     host 127.0.0.1;
-    server_name WEBSERVANT1.1;
 
+    error_page 566 /error_page.html;
+    error_page 488 /400.html;
+    error_page 421 /421.html;
 
-    # Default error pages
+    client_max_body_size 10M;
 
-    error_page 566 ../pages/error_page.html;
-    error_page 488 ../pages/400.html;
-    error_page 404 ../pages/404.html;
-    # error_page ;
-
-    # Limit client body size
-    # client_max_body_size 1k y;
-    # client_max_body_size 1k;
-
-    cgi_dir ./cgi-bin;
-    cgi_exten .py;
-    cgi_executor /usr/bin/python3;
-    
     # Route configuration
     location /hi {
         alias ../pages;
+		save_dir /uploads2;
         # index ;
         # return /pages;
         # index test_index.html;
         # index ds j fd wkej wefdc.html;
         # cgi-path /test/cgi-bin;
-        cgi-exten py;
         autoindex on;
-
         index testPage.html;
         # allowed_method DELETE GET POST HEAD;
+    }
+
+    location /kapouet {
+        alias /tmp/www;
+		#root /;
+        autoindex on;
+		return /hi;
+        index testPage.html;
     }
 }
 
 server {
-    listen  10003;# Port and default server
-    server_name WEBSERVANT2;
-
+    listen  10002;
+    server_name webserv2;
+    host 127.0.0.1;
 
     # Default error pages
 
-    error_page 566 ../pages/error_page.html;
-    error_page 488 ../pages/400.html;
-    error_page 401 ../pages/404.html;
+    error_page 566 /error_page.html;
+    error_page 488 /400.html;
+    error_page 401 /404.html;
     # error_page ;
 
-    # Limit client body size
-    # client_max_body_size 1k y;
-    # client_max_body_size 1k;
+    client_max_body_size 1k;
 
     cgi_dir ./cgi-bin;
     cgi_exten .py;
@@ -94,35 +52,37 @@ server {
     
     # Route configuration
     location /hi {
-        alias ../pages;
+        alias /kapouet/pouic/toto/pouet;
+		save_dir /uploads2;
         # index ;
         # return /pages;
         # index test_index.html;
         # index ds j fd wkej wefdc.html;
         # cgi-path /test/cgi-bin;
-        cgi-exten py;
         autoindex on;
-
         index testPage.html;
         # allowed_method DELETE GET POST HEAD;
     }
+    #if url /kapouet is rooted to /tmp/www, url /kapouet/pouic/toto/pouet is /tmp/www/pouic/toto/pouet
+
 }
 
 server {
-    listen  10003;# Port and default server
-    server_name WEBSERVANT2.1;
+    listen  10002;
+    server_name webserv3;
+    host 127.0.0.1;
 
 
     # Default error pages
 
-    error_page 566 ../pages/error_page.html;
-    error_page 488 ../pages/400.html;
-    error_page 401 ../pages/404.html;
+    error_page 566 /error_page.html;
+    error_page 488 /400.html;
+    error_page 401 /404.html;
     # error_page ;
 
     # Limit client body size
     # client_max_body_size 1k y;
-    # client_max_body_size 1k;
+    client_max_body_size 1k;
 
     cgi_dir ./cgi-bin;
     cgi_exten .py;
@@ -131,18 +91,19 @@ server {
     # Route configuration
     location /hi {
         alias ../pages;
+		save_dir /uploads2;
         # index ;
         # return /pages;
         # index test_index.html;
         # index ds j fd wkej wefdc.html;
         # cgi-path /test/cgi-bin;
-        cgi-exten py;
         autoindex on;
-
         index testPage.html;
         # allowed_method DELETE GET POST HEAD;
     }
+
 }
+
 
 # /flower/script.py
 
