--- a/src/Server/sample.conf
+++ b/src/Server/sample.conf
@@ -9,6 +9,11 @@ server {
 
     client_max_body_size 10M;
 
+	#cgi configuration
+    cgi_dir ./cgi-bin/;
+    cgi_exten .sh;
+    cgi_executor /bin/bash;
+
     # Route configuration
     location /hi {
         alias ../pages;
