--- a/src/CgiHandler/sample.conf
+++ b/src/CgiHandler/sample.conf
@@ -66,7 +66,11 @@ server {
     # Limit client body size
     client_max_body_size 1M;
 
-    # Route configuration
+    #cgi configuration
+    cgi_dir ./cgi-bin/;
+    cgi_exten .sh;
+    cgi_executor /usr/bin/python3;
+
     # Route configuration
     location / {
         root /data/www;
