add extra validation for cgi executor and extension in ConfigData

--- a/src/CgiHandler/sample.conf
+++ b/src/CgiHandler/sample.conf
@@ -68,7 +68,8 @@ server {
 
     #cgi configuration
     cgi_dir ./cgi-bin/;
-    cgi_exten .sh;
+    cgi_exten .py;
+    # cgi_exten .sh;
     cgi_executor /usr/bin/python3;
 
     # Route configuration
