location logic refactored completely, also changed location listing logic to always be correct

--- a/src/Server/sample2.conf
+++ b/src/Server/sample2.conf
@@ -1,8 +1,39 @@
 server {
-    listen  10002;# Port and default server
-    # host 127.0.0.2;
+    listen  10001;
     server_name localhost;
+    host 127.0.0.1;
 
+    client_max_body_size 10M;
+
+    # Route configuration
+    location /hi {
+        alias ../pages;
+		save_dir /uploads2;
+        # index ;
+        # return /pages;
+        # index test_index.html;
+        # index ds j fd wkej wefdc.html;
+        # cgi-path /test/cgi-bin;
+        autoindex on;
+        index testPage.html;
+        # allowed_method DELETE GET POST HEAD;
+    }
+
+    location /kapouet {
+        alias /www;
+		root ../Request/tmp;
+        autoindex on;
+		#return /hi;
+        #index testPage.html;
+    }
+}
+
+# http://localhost:10001/kapouet/pouic/toto/pouet/testPage.html
+
+server {
+    listen  10002;
+    server_name webserv2;
+    host 127.0.0.1;
 
     # Default error pages
 
@@ -11,35 +42,33 @@ server {
     error_page 401 /404.html;
     # error_page ;
 
-    # Limit client body size
-    # client_max_body_size 1k y;
-    # client_max_body_size 1k;
+    client_max_body_size 1k;
 
     cgi_dir ./cgi-bin;
     cgi_exten .py;
     cgi_executor /usr/bin/python3;
-    
+
     # Route configuration
     location /hi {
-        alias ../pages;
-		save_dir /uploadDir;
+        alias /kapouet/pouic/toto/pouet;
+		save_dir /uploads2;
         # index ;
         # return /pages;
         # index test_index.html;
         # index ds j fd wkej wefdc.html;
         # cgi-path /test/cgi-bin;
-        cgi-exten py;
         autoindex on;
-
         index testPage.html;
         # allowed_method DELETE GET POST HEAD;
     }
+    #if url /kapouet is rooted to /tmp/www, url /kapouet/pouic/toto/pouet is /tmp/www/pouic/toto/pouet
+
 }
 
 server {
-    listen  10002;# Port and default server
-    # host 127.0.0.2;
-    server_name WEBSERVANT1.1;
+    listen  10002;
+    server_name webserv3;
+    host 127.0.0.1;
 
 
     # Default error pages
@@ -51,7 +80,7 @@ server {
 
     # Limit client body size
     # client_max_body_size 1k y;
-    # client_max_body_size 1k;
+    client_max_body_size 1k;
 
     cgi_dir ./cgi-bin;
     cgi_exten .py;
@@ -60,92 +89,19 @@ server {
     # Route configuration
     location /hi {
         alias ../pages;
-		save_dir /uploadDir;
+		save_dir /uploads2;
         # index ;
         # return /pages;
         # index test_index.html;
         # index ds j fd wkej wefdc.html;
         # cgi-path /test/cgi-bin;
-        cgi-exten py;
         autoindex on;
-
         index testPage.html;
         # allowed_method DELETE GET POST HEAD;
     }
+
 }
 
-server {
-    listen  10003;# Port and default server
-    server_name WEBSERVANT2;
-
-
-    # Default error pages
-
-    error_page 566 /error_page.html;
-    error_page 488 /400.html;
-    error_page 401 /404.html;
-    # error_page ;
-
-    # Limit client body size
-    # client_max_body_size 1k y;
-    # client_max_body_size 1k;
-
-    cgi_dir ./cgi-bin;
-    cgi_exten .py;
-    cgi_executor /usr/bin/python3;
-    
-    # Route configuration
-    location /hi {
-        alias ../pages;
-		save_dir /uploadDir;
-        # index ;
-        # return /pages;
-        # index test_index.html;
-        # index ds j fd wkej wefdc.html;
-        # cgi-path /test/cgi-bin;
-        cgi-exten py;
-        autoindex on;
-
-        index testPage.html;
-        # allowed_method DELETE GET POST HEAD;
-    }
-}
-
-server {
-    listen  10003;# Port and default server
-    server_name WEBSERVANT2.1;
-
-
-    # Default error pages
-
-    error_page 566 /error_page.html;
-    error_page 488 /400.html;
-    error_page 401 /404.html;
-    # error_page ;
-
-    # Limit client body size
-    # client_max_body_size 1k y;
-    # client_max_body_size 1k;
-
-    cgi_dir ./cgi-bin;
-    cgi_exten .py;
-    cgi_executor /usr/bin/python3;
-    
-    # Route configuration
-    location /hi {
-        alias ../pages;
-        # index ;
-        # return /pages;
-        # index test_index.html;
-        # index ds j fd wkej wefdc.html;
-        # cgi-path /test/cgi-bin;
-        cgi-exten py;
-        autoindex on;
-
-        index testPage.html;
-        # allowed_method DELETE GET POST HEAD;
-    }
-}
 
 # /flower/script.py
 
