--- a/src/CgiHandler/sample.conf
+++ b/src/CgiHandler/sample.conf
@@ -16,6 +16,7 @@ server {
 
     #cgi configuration
     cgi_dir ./cgi-bin/;
+    # cgi_exten .sh .py;
     cgi_exten .py .sh;
     cgi_executor /usr/bin/python3 /bin/bash;
     # cgi_executor /usr/bin/python3;
