location logic refactored completely, also changed location listing logic to always be correct

--- a/src/Request/Makefile
+++ b/src/Request/Makefile
@@ -32,6 +32,14 @@ $(NAME): $(OBJS)
 
 clean:
 	rm -f *.o
+	rm -f ../Server/*.o
+	rm -f ../HttpMessage/*.o
+	rm -f ../Response/*.o
+	rm -f ../config_parser/*.o
+	rm -f ../StringUtils/*.o
+	rm -f ../BinaryData/*.o
+	rm -f ../FileSystemUtils/*.o
+	rm -f ../Logger/*.o
 
 fclean: clean
 	rm -f $(NAME)
