--- a/src/Request/sample.conf
+++ b/src/Request/sample.conf
@@ -1,11 +1,7 @@
 server {
-    listen  10002;
-    server_name webserv1;
+    listen  10001;
+    server_name localhost;
     host 127.0.0.1;
-
-    error_page 566 /error_page.html;
-    error_page 488 /400.html;
-    error_page 421 /421.html;
 
     client_max_body_size 10M;
 
@@ -24,13 +20,15 @@ server {
     }
 
     location /kapouet {
-        alias /tmp/www;
-		#root /;
+        alias /www;
+		root /tmp;
         autoindex on;
-		return /hi;
-        index testPage.html;
+		#return /hi;
+        #index testPage.html;
     }
 }
+
+# http://localhost:10001/kapouet/pouic/toto/pouet/testPage.html
 
 server {
     listen  10002;
@@ -49,7 +47,7 @@ server {
     cgi_dir ./cgi-bin;
     cgi_exten .py;
     cgi_executor /usr/bin/python3;
-    
+
     # Route configuration
     location /hi {
         alias /kapouet/pouic/toto/pouet;
